--- a/src/pages/people/people.html
+++ b/src/pages/people/people.html
@@ -4,8 +4,8 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Home
+      People
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page1"></ion-content>
+<ion-content padding id="page3"></ion-content>
